app/Openshift/openshift_hosting_website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myventoryapp-web-deployment
  namespace: myventory
  labels:
    app: myventoryapp-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myventoryapp-web
  template:
    metadata:
      labels:
        app: myventoryapp-web
    spec:
      containers:
        - name: myventoryapp-web
          image: gitlab.uliege.be:5050/speam/2024-2025/team5/myventoryapp/web-container:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources:
            requests:
              memory: 1Gi
              cpu: 1
              ephemeral-storage: "1Gi"
            limits:
              memory: 1Gi
              cpu: 1
              ephemeral-storage: "1Gi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 1
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: myventoryapp-pull-secret
---
apiVersion: v1
kind: Service
metadata:
  name: myventoryapp-web-service
  namespace: myventory
spec:
  selector:
    app: myventoryapp-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: myventoryapp-web-route
  namespace: myventory
spec:
  to:
    kind: Service
    name: myventoryapp-web-service
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
